Added NoSQL Database

--- a/Slack/Slack/templates/signin.html
+++ b/Slack/Slack/templates/signin.html
@@ -38,7 +38,7 @@ Don't know your workspace URL? <a id="nodeco" href="">Find your workspace</a>
 <div style="position:relative; top:540px;">
 <center>
 Need to get your group started on Lasck?
-<a id="nodeco" href=""><b>Create a new workspace</b></a></center>
+<a id="nodeco" href="{{url_for('register')}}"><b>Create a new workspace</b></a></center>
 </div>
 
 <div style="position:absolute; top:700px; left:50%; transform:translateX(-50%);">
