--- a/Slack/Slack/templates/index.html
+++ b/Slack/Slack/templates/index.html
@@ -18,7 +18,7 @@
 <a href="features">Why Lasck?</a> | 
 <a href="pricing">Pricing</a> | 
 <a href="about">About Us</a> | 
-<a href="get-started">Find Your Workspace</a> | 
+<a href="{{url_for('signIn')}}">Find Your Workspace</a> | 
 <a href="{{url_for('register')}}" style=
 "border:1px solid #505050; padding:2px 2px; border-radius:3px;">Create Workspace</a>
 </div>
